@@ -4021,9 +4021,9 @@ void menu_watches_overlay_mostrar_texto(void)
                         }
 						*/
 
+                    if (debug_watches_show_decimal.v) sprintf (buf_linea,"  Result: %d",resultado);
+	                else sprintf (buf_linea,"  Result: %XH",resultado);
 
-
-	                sprintf (buf_linea,"  Result: %XH",resultado);
 					zxvision_print_string_defaults_fillspc(menu_watches_overlay_window,1,linea,buf_linea);
 
 					linea+=2;
